--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.0.2",
     "postcss": "^8.4.18",
     "react": "18.2.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.2.2",
     "typescript": "4.8.4"
